added more json serialization optimizations -> less errors
